@@ -1103,7 +1103,7 @@ class PokerTable:
                                     wait_for = player.wait_for,
                                     seat = player.seat),
             # the stats packet, generated by the UserStats package.
-            self.factory.getUserStatsLookup().getAttrsAsPacket(self, serial),
+            self.factory.getUserStatsLookup().getAttrsAsPacket(table = self, serial = serial),
             PacketPokerSeats(game_id = game.id, seats = game.seats()),
             PacketPokerPlayerChips(game_id = game.id,
                                    serial = serial,
